[gd_scene load_steps=7 format=3 uid="uid://c8tbmwqdapnsc"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_obqh1"]
[ext_resource type="FontFile" uid="uid://donxec21iqi2o" path="res://Assets/fonts/PixelOperator8.ttf" id="1_s31jl"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="2_7pymf"]
[ext_resource type="Script" path="res://Scripts/shop_input_manager.gd" id="3_ernqd"]
[ext_resource type="FontFile" uid="uid://d2voppd6fmkh6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="4_ral8i"]
[ext_resource type="Script" path="res://Scripts/shop_scene_manager.gd" id="6_e8hkw"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_obqh1")

[node name="CardSlot" type="ColorRect" parent="."]
offset_left = 312.0
offset_top = 104.0
offset_right = 1616.0
offset_bottom = 424.0
mouse_filter = 2
color = Color(0.18359, 0.18359, 0.18359, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CardSlot"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.025
anchor_right = 0.006
anchor_bottom = 0.025
offset_left = 0.224
offset_right = 1280.22
offset_bottom = 304.0
mouse_filter = 2
color = Color(0.106237, 0.106237, 0.106237, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CardSlot/ColorRect"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.474
anchor_right = 0.5
anchor_bottom = 0.474
offset_left = -623.998
offset_top = -128.096
offset_right = 624.002
offset_bottom = 143.904
mouse_filter = 2
color = Color(0.00234459, 0.00234459, 0.00234459, 1)
metadata/_edit_use_anchors_ = true

[node name="CardClipMask" type="ColorRect" parent="CardSlot/ColorRect/ColorRect"]
clip_children = 1
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.474
anchor_right = 0.5
anchor_bottom = 0.474
offset_left = -624.048
offset_top = -176.928
offset_right = 623.952
offset_bottom = 189.072
mouse_filter = 2
color = Color(0.00234459, 0.00234459, 0.00234459, 1)

[node name="TileClipMask" type="ColorRect" parent="."]
clip_children = 1
z_index = 1
offset_left = 312.0
offset_top = 472.0
offset_right = 952.0
offset_bottom = 792.0

[node name="TileSlot" type="ColorRect" parent="."]
offset_left = 312.0
offset_top = 456.0
offset_right = 616.0
offset_bottom = 808.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 344.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="TileSlot2" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 1.105
anchor_right = 1.105
offset_left = 648.0
offset_top = 456.0
offset_right = 952.0
offset_bottom = 808.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -168.0
offset_right = 144.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot2/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="Button" type="Button" parent="."]
self_modulate = Color(0.207512, 0.207512, 0.207512, 1)
z_index = 3
offset_left = 64.0
offset_top = 352.0
offset_right = 256.0
offset_bottom = 512.0
theme = ExtResource("2_7pymf")
theme_override_fonts/font = ExtResource("1_s31jl")
theme_override_font_sizes/font_size = 32
keep_pressed_outside = true

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 28
text = "Reroll"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopInputManager" type="Node2D" parent="."]
script = ExtResource("3_ernqd")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_left = 32.0
offset_right = 288.0
offset_bottom = 104.0
color = Color(0.184314, 0.184314, 0.184314, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_right = 248.0
offset_bottom = 96.0
color = Color(0.105882, 0.105882, 0.105882, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 232.0
offset_bottom = 88.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ColorRect/ColorRect/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_right = 224.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 24
text = "Round: "
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
z_index = 3
layout_mode = 0
offset_top = 120.0
offset_right = 256.0
offset_bottom = 264.0
color = Color(0.184314, 0.184314, 0.184314, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 136.0
color = Color(0.105882, 0.105882, 0.105882, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect2/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 120.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ColorRect/ColorRect2/ColorRect/ColorRect"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 24
text = "Money:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ColorRect/ColorRect2/ColorRect/ColorRect"]
layout_mode = 0
offset_top = 56.0
offset_right = 224.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ContinueButton" type="Button" parent="."]
self_modulate = Color(0.207843, 0.207843, 0.207843, 1)
offset_left = 1616.0
offset_top = 896.0
offset_right = 1896.0
offset_bottom = 1056.0
theme = ExtResource("2_7pymf")
keep_pressed_outside = true

[node name="Label" type="Label" parent="ContinueButton"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 32
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopSceneManager" type="Node2D" parent="."]
script = ExtResource("6_e8hkw")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
